--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ngx-chips",
-  "version": "2.2.2",
+  "name": "@vpetrusevici/ngx-chips",
+  "version": "2.2.3",
   "description": "Tag Input component for Angular",
   "scripts": {
     "release": "npm run build && npm publish dist",
@@ -12,52 +12,48 @@
     "codecov": "ng test modules --code-coverage --browsers=ChromeHeadless --watch=false",
     "ng": "ng"
   },
-  "author": {
-    "name": "Giancarlo Buomprisco",
-    "email": "giancarlopsk@gmail.com"
-  },
   "contributors": [],
   "license": "MIT",
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1001.6",
-    "@angular/animations": "~10.1.5",
-    "@angular/cli": "~10.1.6",
-    "@angular/common": "~10.1.5",
-    "@angular/compiler": "~10.1.5",
-    "@angular/compiler-cli": "~10.1.5",
-    "@angular/core": "~10.1.5",
-    "@angular/forms": "~10.1.5",
-    "@angular/language-service": "~10.1.5",
-    "@angular/platform-browser": "^10.1.5",
-    "@angular/platform-browser-dynamic": "^10.1.5",
-    "@types/jasmine": "~3.3.8",
+    "@angular-devkit/build-angular": "~0.1102.5",
+    "@angular/animations": "~11.2.6",
+    "@angular/cli": "~11.2.5",
+    "@angular/common": "~11.2.6",
+    "@angular/compiler": "~11.2.6",
+    "@angular/compiler-cli": "~11.2.6",
+    "@angular/core": "~11.2.6",
+    "@angular/forms": "~11.2.6",
+    "@angular/language-service": "~11.2.6",
+    "@angular/platform-browser": "^11.2.6",
+    "@angular/platform-browser-dynamic": "^11.2.6",
+    "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
-    "jasmine-core": "~3.4.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^5.1.1",
-    "karma-chrome-launcher": "~2.2.0",
+    "jasmine-core": "~3.6.0",
+    "jasmine-spec-reporter": "~5.0.0",
+    "karma": "^6.2.0",
+    "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
+    "karma-jasmine": "~4.0.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
     "mkdirp": "^0.5.1",
     "ncp": "^2.0.0",
-    "ng-packagr": "^10.0.3",
+    "ng-packagr": "^11.2.4",
     "protractor": "~7.0.0",
     "rxjs": "~6.6.2",
     "tslint": "~6.1.0",
-    "typescript": "~3.9.5",
+    "typescript": "~4.1.5",
     "zone.js": "~0.10.3"
   },
   "dependencies": {
     "@vpetrusevici/ng2-material-dropdown": ">=0.12.0"
   },
   "peerDependencies": {
-    "@angular/animations": ">=10.1.5",
-    "@angular/common": ">=10.1.5",
-    "@angular/compiler": ">=10.1.5",
-    "@angular/core": ">=10.1.5",
-    "@angular/forms": ">=10.1.5"
+    "@angular/animations": ">=11.0.0",
+    "@angular/common": ">=11.0.0",
+    "@angular/compiler": ">=11.0.0",
+    "@angular/core": ">=11.0.0",
+    "@angular/forms": ">=11.0.0"
   },
   "keywords": [
     "angular tag input",
