typing fixes and publish

--- a/angular.json
+++ b/angular.json
@@ -89,6 +89,37 @@
         }
       }
     },
+    "lib": {
+      "root": "/",
+      "projectType": "library",
+      "prefix": "ng2",
+      "schematics": {
+        "@schematics/angular:component": {
+          "style": "scss"
+        }
+      },
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:ng-packagr",
+          "options": {
+            "tsConfig": "tsconfig.json",
+            "project": "ng-package.json"
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "tsconfig.app.json",
+              "tsconfig.spec.json"
+            ],
+            "exclude": [
+              "**/node_modules/**"
+            ]
+          }
+        }
+      }
+    },
     "modules": {
       "projectType": "application",
       "schematics": {
