--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,5 +18,16 @@
       "es2018",
       "dom"
     ]
+  },
+  "angularCompilerOptions": {
+    "genDir": "./ngfactory",
+    "annotateForClosureCompiler": true,
+    "skipTemplateCodegen": true,
+    "strictMetadataEmit": true,
+    "fullTemplateTypeCheck": true,
+    "strictInjectionParameters": true,
+    "enableResourceInlining": true,
+    "preserveSymlinks": true,
+    "enableIvy": false
   }
 }
