--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "@vpetrusevici/ngx-chips",
-  "version": "2.2.3",
+  "version": "2.2.4",
   "description": "Tag Input component for Angular",
   "scripts": {
-    "release": "npm run build && npm publish dist",
-    "postrelease": "rm -rf dist",
-    "build": "ng-packagr -p package.json && mkdirp ./dist/dist && ncp ./modules/core/styles ./dist/core/styles && ncp ./dist/bundles/ngx-chips.umd.js ./dist/dist/ngx-chips.bundle.js",
+    "release": "npm run build && cd dist && npm publish --access public",
+    "build": "ng build lib",
     "server": "ng serve --port 3010",
     "start": "npm run server",
     "test": "ng test modules --browsers=ChromeHeadless --watch=false",
@@ -70,14 +69,12 @@
     "url": "https://github.com/Gbuomprisco/ngx-chips/issues"
   },
   "homepage": "https://github.com/Gbuomprisco/ngx-chips",
-  "$schema": "./node_modules/ng-packagr/package.schema.json",
   "ngPackage": {
-    "$schema": "./node_modules/ng-packagr/ng-package.schema.json",
     "lib": {
       "entryFile": "modules/index.ts"
     },
-    "whitelistedNonPeerDependencies": [
-      "ng2-material-dropdown"
+    "allowedNonPeerDependencies": [
+      "@vpetrusevici/ng2-material-dropdown"
     ]
   },
   "bit": {
